src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__if_let_simple.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: IfLet {
                                    pattern: Pattern {
                                        kind: TupleStruct {
                                            path: TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 2,
                                                            },
                                                            span: Span {
                                                                start: 16,
                                                                end: 20,
                                                                start_line: 1,
                                                                start_col: 17,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 16,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                            fields: [
                                                Pattern {
                                                    kind: Ident {
                                                        by_ref: false,
                                                        mutable: false,
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 21,
                                                                end: 22,
                                                                start_line: 1,
                                                                start_col: 22,
                                                            },
                                                        },
                                                        subpattern: None,
                                                    },
                                                    span: Span {
                                                        start: 21,
                                                        end: 22,
                                                        start_line: 1,
                                                        start_col: 22,
                                                    },
                                                },
                                            ],
                                            rest_pos: None,
                                        },
                                        span: Span {
                                            start: 16,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 17,
                                        },
                                    },
                                    scrutinee: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 26,
                                                                end: 29,
                                                                start_line: 1,
                                                                start_col: 27,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 26,
                                                    end: 29,
                                                    start_line: 1,
                                                    start_col: 27,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 26,
                                            end: 29,
                                            start_line: 1,
                                            start_col: 27,
                                        },
                                    },
                                    then_branch: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Path(
                                                    ExprPath {
                                                        segments: [
                                                            ExprPathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 3,
                                                                    },
                                                                    span: Span {
                                                                        start: 32,
                                                                        end: 33,
                                                                        start_line: 1,
                                                                        start_col: 33,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 32,
                                                            end: 33,
                                                            start_line: 1,
                                                            start_col: 33,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 32,
                                                    end: 33,
                                                    start_line: 1,
                                                    start_col: 33,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 30,
                                            end: 35,
                                            start_line: 1,
                                            start_col: 31,
                                        },
                                    },
                                    else_branch: Some(
                                        Block(
                                            Block {
                                                statements: [],
                                                expr: Some(
                                                    Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 0,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 43,
                                                                    end: 44,
                                                                    start_line: 1,
                                                                    start_col: 44,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 43,
                                                            end: 44,
                                                            start_line: 1,
                                                            start_col: 44,
                                                        },
                                                    },
                                                ),
                                                span: Span {
                                                    start: 41,
                                                    end: 46,
                                                    start_line: 1,
                                                    start_col: 42,
                                                },
                                            },
                                        ),
                                    ),
                                },
                                span: Span {
                                    start: 9,
                                    end: 46,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 48,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 48,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 48,
        start_line: 1,
        start_col: 1,
    },
}
