src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__impl_block.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Impl(
            ImplBlock {
                attrs: [],
                type_params: None,
                trait_ty: None,
                self_ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 1,
                                        },
                                        span: Span {
                                            start: 6,
                                            end: 11,
                                            start_line: 2,
                                            start_col: 6,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 6,
                                end: 11,
                                start_line: 2,
                                start_col: 6,
                            },
                        },
                    ),
                    span: Span {
                        start: 6,
                        end: 11,
                        start_line: 2,
                        start_col: 6,
                    },
                },
                where_clause: None,
                items: [
                    Function(
                        FnDecl {
                            attrs: [],
                            vis: Private,
                            qualifiers: FnQualifiers {
                                is_const: false,
                                is_async: false,
                                is_unsafe: false,
                            },
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 21,
                                    end: 24,
                                    start_line: 3,
                                    start_col: 8,
                                },
                            },
                            type_params: None,
                            params: [
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 25,
                                                    end: 26,
                                                    start_line: 3,
                                                    start_col: 12,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 25,
                                            end: 26,
                                            start_line: 3,
                                            start_col: 12,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 28,
                                                                end: 31,
                                                                start_line: 3,
                                                                start_col: 15,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 28,
                                                    end: 31,
                                                    start_line: 3,
                                                    start_col: 15,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 28,
                                            end: 31,
                                            start_line: 3,
                                            start_col: 15,
                                        },
                                    },
                                    span: Span {
                                        start: 25,
                                        end: 31,
                                        start_line: 3,
                                        start_col: 12,
                                    },
                                },
                                Param {
                                    qualifier: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 5,
                                                },
                                                span: Span {
                                                    start: 33,
                                                    end: 34,
                                                    start_line: 3,
                                                    start_col: 20,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 33,
                                            end: 34,
                                            start_line: 3,
                                            start_col: 20,
                                        },
                                    },
                                    ty: Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 36,
                                                                end: 39,
                                                                start_line: 3,
                                                                start_col: 23,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 36,
                                                    end: 39,
                                                    start_line: 3,
                                                    start_col: 23,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 36,
                                            end: 39,
                                            start_line: 3,
                                            start_col: 23,
                                        },
                                    },
                                    span: Span {
                                        start: 33,
                                        end: 39,
                                        start_line: 3,
                                        start_col: 20,
                                    },
                                },
                            ],
                            return_type: Some(
                                Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 1,
                                                        },
                                                        span: Span {
                                                            start: 44,
                                                            end: 49,
                                                            start_line: 3,
                                                            start_col: 31,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 44,
                                                end: 49,
                                                start_line: 3,
                                                start_col: 31,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 44,
                                        end: 49,
                                        start_line: 3,
                                        start_col: 31,
                                    },
                                },
                            ),
                            effects: None,
                            spec_clauses: [],
                            where_clause: None,
                            body: Some(
                                Block {
                                    statements: [],
                                    expr: Some(
                                        Expr {
                                            kind: Record {
                                                path: Some(
                                                    TypePath {
                                                        segments: [
                                                            TypePathSegment {
                                                                name: Spanned {
                                                                    node: SymbolU32 {
                                                                        value: 1,
                                                                    },
                                                                    span: Span {
                                                                        start: 60,
                                                                        end: 65,
                                                                        start_line: 4,
                                                                        start_col: 9,
                                                                    },
                                                                },
                                                                args: None,
                                                            },
                                                        ],
                                                        span: Span {
                                                            start: 60,
                                                            end: 65,
                                                            start_line: 4,
                                                            start_col: 9,
                                                        },
                                                    },
                                                ),
                                                fields: [
                                                    RecordExprField {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 68,
                                                                end: 69,
                                                                start_line: 4,
                                                                start_col: 17,
                                                            },
                                                        },
                                                        value: None,
                                                        span: Span {
                                                            start: 68,
                                                            end: 69,
                                                            start_line: 4,
                                                            start_col: 17,
                                                        },
                                                    },
                                                    RecordExprField {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 71,
                                                                end: 72,
                                                                start_line: 4,
                                                                start_col: 20,
                                                            },
                                                        },
                                                        value: None,
                                                        span: Span {
                                                            start: 71,
                                                            end: 72,
                                                            start_line: 4,
                                                            start_col: 20,
                                                        },
                                                    },
                                                ],
                                                base: None,
                                            },
                                            span: Span {
                                                start: 60,
                                                end: 74,
                                                start_line: 4,
                                                start_col: 9,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 50,
                                        end: 80,
                                        start_line: 3,
                                        start_col: 37,
                                    },
                                },
                            ),
                            span: Span {
                                start: 18,
                                end: 80,
                                start_line: 3,
                                start_col: 5,
                            },
                        },
                    ),
                ],
                span: Span {
                    start: 1,
                    end: 82,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 82,
        start_line: 2,
        start_col: 1,
    },
}
