src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__import_single_item_rust_style.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Simple {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 9,
                            end: 11,
                            start_line: 1,
                            start_col: 10,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 13,
                            end: 20,
                            start_line: 1,
                            start_col: 14,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 20,
                    start_line: 1,
                    start_col: 5,
                },
            },
            alias: None,
            visibility: Private,
            span: Span {
                start: 0,
                end: 21,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 21,
        start_line: 1,
        start_col: 1,
    },
}
