src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__import_with_mixed_separators.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Simple {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 8,
                            end: 19,
                            start_line: 1,
                            start_col: 9,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 21,
                            end: 24,
                            start_line: 1,
                            start_col: 22,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 4,
                        },
                        span: Span {
                            start: 26,
                            end: 33,
                            start_line: 1,
                            start_col: 27,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 33,
                    start_line: 1,
                    start_col: 5,
                },
            },
            alias: None,
            visibility: Private,
            span: Span {
                start: 0,
                end: 34,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 34,
        start_line: 1,
        start_col: 1,
    },
}
